--- a/Assets/UI Toolkit/UI/UI.uxml
+++ b/Assets/UI Toolkit/UI/UI.uxml
@@ -6,11 +6,15 @@
             <ui:Label text="COLOR COMBO" display-tooltip-when-elided="true" name="Lbl_Sub" style="-unity-text-align: middle-center; font-size: 30px; color: rgb(255, 255, 255);" />
             <ui:Button text="START" display-tooltip-when-elided="true" name="Btn_Start" class="button" style="top: 100%; width: 200px; height: 80px; align-items: auto; justify-content: flex-start; left: auto; right: auto; font-size: 18px; color: rgb(255, 255, 255); border-left-color: rgb(68, 13, 212); border-right-color: rgb(68, 13, 212); border-top-color: rgb(68, 13, 212); border-bottom-color: rgb(68, 13, 212); background-color: rgb(54, 58, 66);" />
         </ui:VisualElement>
-        <ui:VisualElement name="VE_Scoring" style="top: 10%; display: none;">
+        <ui:VisualElement name="VE_Scoring" style="top: auto; display: flex;">
+            <ui:VisualElement name="VE_HighScore" style="flex-direction: row;">
+                <ui:Label text="High Score :" display-tooltip-when-elided="true" name="Lbl_High" style="margin-left: 10px; margin-right: 0; margin-top: 10px; margin-bottom: 10px; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; font-size: 18px; color: rgb(255, 255, 255);" />
+                <ui:Label text="0" display-tooltip-when-elided="true" name="Lbl_HighScore" style="margin-left: 0; margin-right: 10px; margin-top: 10px; margin-bottom: 10px; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; font-size: 18px; color: rgb(255, 255, 255);" />
+            </ui:VisualElement>
             <ui:Label text="0" display-tooltip-when-elided="true" name="Lbl_Score" style="align-items: center; justify-content: center; font-size: 100px; -unity-text-align: middle-center; -unity-font: url(&apos;project://database/Assets/UI%20Toolkit/UnityThemes/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&amp;guid=a4d5a4bf41d8e6441a178908f031e1e9&amp;type=3#NotInter-Regular&apos;); text-shadow: 0 0 0 rgb(0, 0, 0); color: rgb(253, 253, 253);" />
             <ui:Label display-tooltip-when-elided="true" name="Lbl_Combo" style="font-size: 30px; -unity-text-align: middle-center; visibility: visible; color: rgb(255, 255, 255);" />
         </ui:VisualElement>
-        <ui:VisualElement name="VE_GameOver" style="display: flex; width: auto; height: auto; top: 10%; align-items: center; justify-content: flex-start;">
+        <ui:VisualElement name="VE_GameOver" style="display: none; width: auto; height: auto; top: 10%; align-items: center; justify-content: flex-start;">
             <ui:Label text="Final Score" display-tooltip-when-elided="true" name="Lbl_FinalScore" style="-unity-text-align: middle-center; font-size: 50px; color: rgb(255, 255, 255);" />
             <ui:Label text="0" display-tooltip-when-elided="true" name="Lbl_EndScore" style="-unity-text-align: middle-center; font-size: 120px; color: rgb(255, 255, 255);" />
             <ui:Button text="RETURN" display-tooltip-when-elided="true" name="Btn_Return" class="button" style="top: 100%; width: 200px; height: 80px; align-items: auto; justify-content: flex-start; left: auto; right: auto; font-size: 18px; color: rgb(255, 255, 255); border-left-color: rgb(68, 13, 212); border-right-color: rgb(68, 13, 212); border-top-color: rgb(68, 13, 212); border-bottom-color: rgb(68, 13, 212); background-color: rgb(54, 58, 66);" />
